Uploaded the Header (html+css+js)
Uploaded the Header (html+css+js):
*fixed the width between buttons in the header
*fixed spacing between buttons in the header.

--- a/index.html
+++ b/index.html
@@ -37,107 +37,110 @@
                     <button class="dots"></button>
                 </li>
                 <li class="right">
-                    <!-- Manage button -->
-                    <button id="manageButton" data-key="manage" data-dropdown-toggle="manageSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">Manage<svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
-                    </svg>
-                    </button>
+                    <li>
+                        <!-- Manage button -->
+                        <button id="manageButton" data-key="manage" data-dropdown-toggle="manageSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">Manage<svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+                        </svg>
+                        </button>
 
-                    <!-- Manage menu -->
-                    <div id="manageSearch" class="z-10 hidden bg-white rounded-lg shadow-sm w-40 dark:bg-gray-700" style="cursor: pointer;">
-                        <div class="p-3">
-                        <label for="input-group-search" class="sr-only">Search</label>
-                        <div class="relative">
-                            <div class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
-                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
-                            </svg>
+                        <!-- Manage menu -->
+                        <div id="manageSearch" class="z-10 hidden bg-white rounded-lg shadow-sm w-40 dark:bg-gray-700" style="cursor: pointer;">
+                            <div class="p-3">
+                            <label for="input-group-search" class="sr-only">Search</label>
+                            <div class="relative">
+                                <div class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+                                </svg>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <ul id="manage-list" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 mb-3">
-                        <li class="view-option py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded">
-                            View</li>
-                        <li class="modify-option py-2 px-3 w-full text-left bg-yellow-100 hover:bg-yellow-200 rounded">
-                            Modify</li>
-                        <li class="cancel-option py-2 px-3 w-full text-left bg-green-100 hover:bg-green-200 rounded">
-                            Cancel</li>
-                    </ul>
-                </li>
-               <li>
-  <button id="addButton" style="cursor: pointer;" class="text-white bg-blue-700 hover:bg-blue-800 ...">
-    Add
-    <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
-    </svg>
-  </button>
-
-  <div id="addSearch" class="hidden z-10 bg-white rounded-lg shadow-sm w-40 dark:bg-gray-700" style="cursor: pointer; position:absolute;">
-    <ul id="add-list" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 mb-3 p-2">
-      <li class="event-option py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
-        Event
-      </li>
-      <li class="fewEvents-option py-2 px-3 w-full text-left bg-yellow-100 hover:bg-yellow-200 rounded cursor-pointer">
-        Few Events
-      </li>
-    </ul>
-  </div>
-</li>
-
-<!-- Modal for Event -->
-<div id="eventModal" class="modal hidden">
-  <div class="modal-content">
-    <h2>Add Event</h2>
-    <form id="eventForm">
-      <input type="text" name="title" placeholder="Title" required />
-      <textarea name="description" placeholder="Description"></textarea>
-      <button type="submit">Add</button>
-      <button type="button" onclick="closeModal()">Cancel</button>
-    </form>
-  </div>
-</div>
-
-<!-- Modal for Few Events -->
-<div id="fewEventsModal" class="modal hidden">
-  <div class="modal-content">
-    <h2>Add Few Events</h2>
-    <form id="fewEventsForm">
-      <input type="text" name="summary" placeholder="Summary" required />
-      <textarea name="details" placeholder="Details"></textarea>
-      <button type="submit">Add</button>
-      <button type="button" onclick="closeModal()">Cancel</button>
-    </form>
-  </div>
-</div>
-                <li>
-                    <!-- Color theme button -->
-                    <button id="colorThemeButton" data-key="colorTheme" data-dropdown-toggle="colorThemeSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">Color Theme<svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
-                    </svg>
-                    </button>
-
-                    <!-- Color theme menu -->
-                    <div id="colorThemeSearch" class="z-10 hidden bg-white rounded-lg shadow-sm w-40 dark:bg-gray-700" style="cursor: pointer;">
-                        <div class="px-3 pb-3 ">
-                        <label for="input-group-search" class="sr-only">Search</label>
-                        <div class="relative">
-                            <div class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
-                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+                        <ul id="manage-list" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 mb-3">
+                            <li class="view-option py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded">
+                                View</li>
+                            <li class="modify-option py-2 px-3 w-full text-left bg-yellow-100 hover:bg-yellow-200 rounded">
+                                Modify</li>
+                            <li class="cancel-option py-2 px-3 w-full text-left bg-green-100 hover:bg-green-200 rounded">
+                                Cancel</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <button id="addButton" data-key="add"style="cursor: pointer;" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                            Add
+                            <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
                             </svg>
+                        </button>
+
+                        <div id="addSearch" class="hidden z-10 bg-white rounded-lg shadow-sm w-40 dark:bg-gray-700" style="cursor: pointer; position:absolute;">
+                            <ul id="add-list" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 mb-3 p-2">
+                            <li class="event-option py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                Event
+                            </li>
+                            <li class="fewEvents-option py-2 px-3 w-full text-left bg-yellow-100 hover:bg-yellow-200 rounded cursor-pointer">
+                                Few Events
+                            </li>
+                            </ul>
+                        </div>
+                    
+
+                        <!-- Modal for Event -->
+                        <div id="eventModal" class="modal hidden">
+                        <div class="modal-content">
+                            <h2>Add Event</h2>
+                            <form id="eventForm">
+                                <input type="text" name="title" placeholder="Title" required />
+                                <textarea name="description" placeholder="Description"></textarea>
+                                <button type="submit">Add</button>
+                                <button type="button" onclick="closeModal()">Cancel</button>
+                            </form>
+                        </div>
+                        </div>
+
+                        <!-- Modal for Few Events -->
+                        <div id="fewEventsModal" class="modal hidden">
+                        <div class="modal-content">
+                            <h2>Add Few Events</h2>
+                            <form id="fewEventsForm">
+                                <input type="text" name="summary" placeholder="Summary" required />
+                                <textarea name="details" placeholder="Details"></textarea>
+                                <button type="submit">Add</button>
+                                <button type="button" onclick="closeModal()">Cancel</button>
+                            </form>
+                        </div>
+                        </div>
+                    </li>
+                    <li>
+                        <!-- Color theme button -->
+                        <button id="colorThemeButton" data-key="colorTheme" data-dropdown-toggle="colorThemeSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">Color Theme<svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+                        </svg>
+                        </button>
+
+                        <!-- Color theme menu -->
+                        <div id="colorThemeSearch" class="z-10 hidden bg-white rounded-lg shadow-sm w-40 dark:bg-gray-700" style="cursor: pointer;">
+                            <div class="px-3 pb-3 ">
+                            <label for="input-group-search" class="sr-only">Search</label>
+                            <div class="relative">
+                                <div class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+                                </svg>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <ul id="theme-options" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 mb-3">
-                        <li class="theme-option py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded" data-theme="blue">
-                            Blue</li>
-                        <li class="theme-option py-2 px-3 w-full text-left bg-yellow-100 hover:bg-yellow-200 rounded" data-theme="yellow">
-                            Yellow</li>
-                        <li class="theme-option py-2 px-3 w-full text-left bg-green-100 hover:bg-green-200 rounded" data-theme="green">
-                            Green</li>
-                        <li class="theme-option py-2 px-3 w-full text-left bg-red-100 hover:bg-red-200 rounded" data-theme="red">
-                            Red</li>
-                        <li class="theme-option py-2 px-3 w-full text-left bg-gradient-to-r from-pink-100 via-yellow-100 to-green-100 hover:brightness-110 rounded" data-theme="multicolor">
-                            Multicolor</li>
-                    </ul>
+                        <ul id="theme-options" class="text-sm text-gray-700 dark:text-gray-200 space-y-1 mb-3">
+                            <li class="theme-option py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded" data-theme="blue">
+                                Blue</li>
+                            <li class="theme-option py-2 px-3 w-full text-left bg-yellow-100 hover:bg-yellow-200 rounded" data-theme="yellow">
+                                Yellow</li>
+                            <li class="theme-option py-2 px-3 w-full text-left bg-green-100 hover:bg-green-200 rounded" data-theme="green">
+                                Green</li>
+                            <li class="theme-option py-2 px-3 w-full text-left bg-red-100 hover:bg-red-200 rounded" data-theme="red">
+                                Red</li>
+                            <li class="theme-option py-2 px-3 w-full text-left bg-gradient-to-r from-pink-100 via-yellow-100 to-green-100 hover:brightness-110 rounded" data-theme="multicolor">
+                                Multicolor</li>
+                        </ul>
+                    </li>
                 </li>
             </ul>
         </div>
